fixed vl logo to redirect to vl app and centered alignment

--- a/src/client/styles/navigation/header.scss
+++ b/src/client/styles/navigation/header.scss
@@ -1,5 +1,5 @@
 .header {
-	@apply .relative .py-8 .pl-8 .pr-4 .flex .justify-between;
+	@apply .relative .py-8 .pl-8 .pr-4 .flex .justify-between .items-center;
 
 	.header__logo-1 {
 		width: 64px;
